fix(sass): remove extra margins for nested lists
Skeleton gives lists additional margin-bottom so remove it
and reset some styles for nested lists

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -85,12 +85,6 @@ ol {
   margin-left: $spacing-unit;
 }
 
-li {
-  > ul, > ol {
-    margin-bottom: 0;
-  }
-}
-
 /**
  * Headings.
  */
@@ -161,7 +155,7 @@ blockquote {
  */
 %clearfix {
   &:after {
-    content: "";
+    content: '';
     display: table;
     clear: both;
   }
